--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,15 @@
 theme: jekyll-theme-minimal
 title: null
+
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: false
+      read_time: true
+      comments: true
+      share: true
+      related: true
